--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,8 @@
     <dimen name="elevation_default">8dp</dimen>
     <dimen name="cardCornerRadius_default">8dp</dimen>
     <dimen name="cardView_margin_default">8dp</dimen>
+    <dimen name="fab_margin_default">16dp</dimen>
+    <dimen name= "textview_margin_default">8dp</dimen>
+
+    <dimen name="bigTextSize">40sp</dimen>
 </resources>
