--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,13 +15,29 @@
     </style>
 
 
-    <style name="textview">
+    <style name="textviewColorWhite">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
-    <style name="Widget.App.MaterialDivider" parent="Widget.Material3.MaterialDivider">
-        <item name="dividerColor">@color/white</item>
+    <style name="textviewColorSecondary">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/secondary</item>
     </style>
+
+    <style name="shapeableImageView">
+        <item name="android:layout_width">@dimen/shapeableImageView_default_width</item>
+        <item name="android:layout_height">@dimen/shapeableImageView_default_height</item>
+        <item name="android:layout_margin">@dimen/shapeableImageView_default_margin</item>
+
+    </style>
+
+    <style name="imageViewStudent">
+        <item name="android:layout_width">@dimen/imageView_big_width</item>
+        <item name="android:layout_height">@dimen/imageView_big_height</item>
+    </style>
+
 
 </resources>
