--- a/app/src/main/res/layout/fragment_disciplines.xml
+++ b/app/src/main/res/layout/fragment_disciplines.xml
@@ -12,11 +12,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <com.google.android.material.materialswitch.MaterialSwitch
+            android:id="@+id/disciplineFragment_switch_favorite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="false"
+            android:text="@string/fragment_discipline_switch_favorite_label"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_margin="@dimen/switch_magtin"
+            app:layout_constraintBottom_toTopOf="@id/disciplinesFragment_recyclerView"/>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/disciplinesFragment_recyclerView"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/disciplineFragment_switch_favorite"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
