--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.StudentDiary" parent="Theme.Material3.DayNight">
+    <style name="Theme.StudentDiary" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
+
+        <item name="colorSurface">@color/purple_700</item>
 
         <item name="colorOnPrimary">#FFFFFF</item>
         <!-- Secondary brand color. -->
