--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.activity.MainActivity"
-    android:id="@+id/drawer_layout">
+    android:id="@+id/drawer_layout"
+    tools:openDrawer="start">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -14,14 +15,13 @@
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/activity_main_toolbar"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/principal"
-            app:navigationIcon="@drawable/ic_add"
-            app:layout_constraintBottom_toTopOf="@id/nav_host_fragment"/>
+            app:layout_constraintBottom_toTopOf="@id/nav_host_fragment"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:navigationIcon="@drawable/ic_add" />
 
         <fragment
             android:id="@+id/nav_host_fragment"
@@ -37,13 +37,15 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    
+
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
+        app:headerLayout="@layout/header_navigation_drawer"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        app:menu ="@menu/navigation_drawer"
-        android:fitsSystemWindows="true"/>
+        app:menu ="@menu/navigation_drawer_menu"
+        android:fitsSystemWindows="true"
+        />
 
 </androidx.drawerlayout.widget.DrawerLayout>
