icone para mostrar o drawer

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:navigationIcon="@drawable/ic_add" />
+            app:navigationIcon="@drawable/ic_dehaze" />
 
         <fragment
             android:id="@+id/nav_host_fragment"
