--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,8 +20,7 @@
             app:layout_constraintBottom_toTopOf="@id/nav_host_fragment"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:navigationIcon="@drawable/ic_dehaze" />
+            app:layout_constraintTop_toTopOf="parent"/>
 
         <fragment
             android:id="@+id/nav_host_fragment"
