--- a/app/src/main/res/layout/fragment_discipline_form.xml
+++ b/app/src/main/res/layout/fragment_discipline_form.xml
@@ -1,14 +1,130 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:fillViewport="true"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+tools:context=".ui.fragment.disciplineFormFragment.DisciplineFormFragment">
+
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.fragment.disciplineFormFragment.DisciplineFormFragment">
+    android:layout_height="wrap_content">
+
+    <ImageView
+        android:id="@+id/disciplineForm_fragment_imageView"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/imageView_big_height"
+        android:scaleType="centerCrop"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/placeholder"/>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/disciplineForm_fragment_textfield_name"
+        style="@style/textField"
+        app:layout_constraintTop_toBottomOf="@id/disciplineForm_fragment_imageView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:hint="@string/discipline_form_fragment_text_field_hint_name"
+        app:endIconMode="clear_text"
+        app:startIconDrawable="@drawable/ic_email">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textAutoComplete" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/disciplineForm_fragment_textfield_description"
+        style="@style/textField"
+        app:layout_constraintTop_toBottomOf="@id/disciplineForm_fragment_textfield_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:hint="@string/discipline_form_fragment_text_field_hint_description"
+        app:endIconMode="clear_text"
+        app:helperTextEnabled="true"
+        app:helperText="@string/discipline_form_fragment_text_field_description_helper"
+        app:counterEnabled="true"
+        app:counterMaxLength="100">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textAutoComplete"
+            android:maxLength="100"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
 
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Formulário Disciplina " />
+    <Button
+        android:id="@+id/disciplineForm_fragment_start_time"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/disciplineForm_fragment_end_time"
+        app:layout_constraintTop_toBottomOf="@id/disciplineForm_fragment_textfield_description"
+        style="@style/elevationButton"
+        android:text="@string/discipline_form_fragment_startTimeButton"
+        />
 
-</FrameLayout>
+
+    <Button
+        android:id="@+id/disciplineForm_fragment_end_time"
+        app:layout_constraintTop_toTopOf="@id/disciplineForm_fragment_start_time"
+        app:layout_constraintBottom_toBottomOf="@id/disciplineForm_fragment_start_time"
+        app:layout_constraintStart_toEndOf="@id/disciplineForm_fragment_start_time"
+        app:layout_constraintEnd_toEndOf="parent"
+        style="@style/elevationButton"
+        android:text="@string/discipline_form_fragment_endTimeButton"
+        />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/discipline_form_fab_img"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/fab_margin_default"
+        android:contentDescription="@string/discipline_form_fragment_fab_img_content_desc"
+        android:src="@drawable/ic_photo"
+        app:layout_constraintBottom_toBottomOf="@id/disciplineForm_fragment_imageView"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
+<!--    <ImageButton-->
+
+<!--        android:id="@+id/iconButton"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:layout_constraintBottom_toBottomOf="@id/disciplineForm_fragment_imageView"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        android:layout_margin="@dimen/margin_default"-->
+<!--        android:src="@drawable/ic_photo"-->
+<!--        android:background="@android:color/transparent"-->
+<!--        android:clickable="true"-->
+<!--        />-->
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/discipline_form_fab_done"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/fab_margin_default"
+        android:contentDescription="@string/discipline_form_fragment_fab_img_content_desc"
+        android:src="@drawable/ic_done"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+            <CheckBox
+                android:id="@+id/discipline_form_checkBox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:button="@drawable/sl_favorite"
+                app:buttonTint="@color/white"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@id/disciplineForm_fragment_imageView"
+                android:layout_margin="@dimen/margin_default"/>
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
