--- a/app/src/main/res/layout/fragment_discipline_form.xml
+++ b/app/src/main/res/layout/fragment_discipline_form.xml
@@ -9,7 +9,10 @@ tools:context=".ui.fragment.disciplineFormFragment.DisciplineFormFragment">
 
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:focusableInTouchMode="true"
+    android:focusable="true"
+    android:clickable="true">
 
     <ImageView
         android:id="@+id/disciplineForm_fragment_imageView"
@@ -20,6 +23,27 @@ tools:context=".ui.fragment.disciplineFormFragment.DisciplineFormFragment">
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:src="@drawable/placeholder"/>
+
+    <CheckBox
+        android:id="@+id/discipline_form_checkBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:button="@drawable/sl_favorite"
+        app:buttonTint="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/disciplineForm_fragment_imageView"
+        android:layout_margin="@dimen/margin_default"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/discipline_form_fab_img"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/fab_margin_default"
+        android:contentDescription="@string/discipline_form_fragment_fab_img_content_desc"
+        android:src="@drawable/ic_photo"
+        app:layout_constraintBottom_toBottomOf="@id/disciplineForm_fragment_imageView"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/disciplineForm_fragment_textfield_name"
@@ -59,16 +83,13 @@ tools:context=".ui.fragment.disciplineFormFragment.DisciplineFormFragment">
 
     </com.google.android.material.textfield.TextInputLayout>
 
-
     <Button
         android:id="@+id/disciplineForm_fragment_start_time"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/disciplineForm_fragment_end_time"
         app:layout_constraintTop_toBottomOf="@id/disciplineForm_fragment_textfield_description"
         style="@style/elevationButton"
-        android:text="@string/discipline_form_fragment_startTimeButton"
-        />
-
+        android:text="@string/discipline_form_fragment_startTimeButton" />
 
     <Button
         android:id="@+id/disciplineForm_fragment_end_time"
@@ -81,30 +102,6 @@ tools:context=".ui.fragment.disciplineFormFragment.DisciplineFormFragment">
         />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/discipline_form_fab_img"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/fab_margin_default"
-        android:contentDescription="@string/discipline_form_fragment_fab_img_content_desc"
-        android:src="@drawable/ic_photo"
-        app:layout_constraintBottom_toBottomOf="@id/disciplineForm_fragment_imageView"
-        app:layout_constraintEnd_toEndOf="parent"
-        />
-
-<!--    <ImageButton-->
-
-<!--        android:id="@+id/iconButton"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        app:layout_constraintBottom_toBottomOf="@id/disciplineForm_fragment_imageView"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        android:layout_margin="@dimen/margin_default"-->
-<!--        android:src="@drawable/ic_photo"-->
-<!--        android:background="@android:color/transparent"-->
-<!--        android:clickable="true"-->
-<!--        />-->
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/discipline_form_fab_done"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -112,17 +109,23 @@ tools:context=".ui.fragment.disciplineFormFragment.DisciplineFormFragment">
         android:contentDescription="@string/discipline_form_fragment_fab_img_content_desc"
         android:src="@drawable/ic_done"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/discipline_form_fab_calendar"
+        app:layout_constraintVertical_bias="1"/>
 
-            <CheckBox
-                android:id="@+id/discipline_form_checkBox"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:button="@drawable/sl_favorite"
-                app:buttonTint="@color/white"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/disciplineForm_fragment_imageView"
-                android:layout_margin="@dimen/margin_default"/>
+
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:id="@+id/discipline_form_fab_calendar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/fab_margin_default"
+        android:contentDescription="@string/discipline_form_fragment_fab_calendar_content_desc"
+        app:icon="@drawable/ic_calendar"
+        app:layout_constraintTop_toBottomOf="@id/disciplineForm_fragment_end_time"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:text="@string/discipline_form_fragment_fab_calendar_title"
+        />
 
 
 
