--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -50,6 +50,12 @@
             android:name="testeId"
             app:argType="string"
             app:nullable="true" />
+        <action
+            android:id="@+id/action_disciplineFormFragment_to_disciplinesFragment"
+            app:destination="@id/disciplinesFragment"
+            app:launchSingleTop="false"
+            app:popUpTo="@id/nav_graph"
+            app:popUpToInclusive="false" />
     </fragment>
     <fragment
         android:id="@+id/pomodoroFragment"
